--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon"  href="/public/images/Logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
 
    
     <title>Mohamed Halabe</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="../myapp/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
 
   
   </body>
